--- a/Source/ClaimDoors.csproj
+++ b/Source/ClaimDoors.csproj
@@ -48,10 +48,18 @@
       <HintPath>..\..\..\RimWorldWin64_Data\Managed\UnityEngine.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="UnityEngine.CoreModule">
+      <HintPath>..\..\..\RimWorldWin64_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Patches.cs" />
+    <Compile Include="Designator_AddFog.cs" />
+    <Compile Include="Designator_Fog.cs" />
+    <Compile Include="Designator_RemoveFog.cs" />
+    <Compile Include="ClaimDoorsMain.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Patches.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Lib.Harmony" Version="2.0.0.10">
